--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Day 4</title>
   </head>
   <body>
+    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
     <script src="./src/index.js"></script>
   </body>
 </html>
